# livekit-traces-analyzer

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: analysis.rs  app.rs  cloud.rs  data.rs  events.rs  format.rs  input.rs  main.rs  parser.rs  pcap.rs  report.rs  thresholds.rs  timeline.rs
src/ui/: agents.rs  charts.rs  context.rs  help.rs  latency.rs  logs.rs  mod.rs  overview.rs  spans.rs  tools.rs  transcript.rs
