[package]
name = "livekit-analyzer"
version = "0.5.0"
edition = "2021"
description = "Interactive TUI for analyzing LiveKit call observability data"
authors = ["Hormold"]
license = "MIT"
repository = "https://github.com/Hormold/livekit-traces-analyzer"
readme = "README.md"
keywords = ["livekit", "voice-agent", "observability", "tui", "latency"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
zip = "2.2"
pcap-file = "2"
tempfile = "3"

# Cloud API (experimental)
reqwest = { version = "0.12", features = ["blocking", "json"] }
jsonwebtoken = "9"
serde_yaml = "0.9"
